# mcp-local-context

./: .gitignore  README.md  bump_version.py  docs_server.py  install.sh  mcp-local-context  mcp_local_context.py  publish.sh  pyproject.toml  requirements.txt  run.sh  run_mcp_server.py  run_tests.py  setup.py  simple_mcp_server.py  smithery.yaml  test.py  test_client.py
mcp_local_context/: __init__.py
mcp_local_context.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp_local_context_old/: __init__.py  simple_server.py
src/mcp_local_context/: __init__.py  cli.py  server.py
src/mcp_local_context/core/: __init__.py  document_classifier.py  document_handler.py  factory.py  index_manager.py  search_engine.py  server.py
