[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mcp-local-context"
version = "0.1.4"
description = "Local Documentation MCP Server with RAG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steed Monteiro", email = "steed.monteiro@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.9.1",
]

[project.optional-dependencies]
rag = ["vlite>=0.2.0"]

[project.urls]
Homepage = "https://github.com/steedmonteiro/mcp-local-context"
Issues = "https://github.com/steedmonteiro/mcp-local-context/issues"

[project.scripts]
mcp-local-context = "mcp_local_context.cli:main"

[tool.setuptools.package-dir]
"" = "src"
